fix: arrow position if tippy inside text-align: center container

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -82,6 +82,8 @@ $color: #333;
     position: absolute;
     border-color: transparent;
     border-style: solid;
+    // https://github.com/atomiks/tippyjs/issues/722
+    left: 0;
   }
 }
 
